--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -1,4 +1,4 @@
-<section class="fruits">
+<section class="fruits container">
     <div class="fruit-header">
         <div class="fruit-header-container">
             <h2>Organic Fruits</h2>
@@ -15,7 +15,12 @@
                     <div class="card-inside">
                         <h3>Strawberry</h3>
                         <p>Plant</p>
-                        <img src="" alt="Strawberry">
+                        <img 
+                        srcset="/src/images/fruits-strawberry.png"
+                        srcset="/src/images/fruits-strawberry@2x.png"
+                        src="/src/images/fruits-strawberry.png" 
+                        alt="Strawberry">
+                        <div class="fruits-shadow"></div>
                         <button>100 UAH / kg</button>
                     </div>
                 </li>
@@ -23,7 +28,12 @@
                     <div class="card-inside">
                         <h3>Banana</h3>
                         <p>Plant</p>
-                        <img src="" alt="Banana">
+                        <img 
+                        srcset="/src/images/fruits-banana.png"
+                        srcset="/src/images/fruits-banana@2x.png"
+                        src="/src/images/fruits-banana.png" 
+                        alt="Banana">
+                        <div class="fruits-shadow"></div>
                         <button>80 UAH / kg</button>
                     </div>
                 </li>
@@ -31,7 +41,12 @@
                     <div class="card-inside">
                         <h3>Watermelon</h3>
                         <p>Plant</p>
-                        <img src="" alt="Watermelon">
+                        <img 
+                        srcset="/src/images/fruits-watermelon.png"
+                        srcset="/src/images/fruits-watermelon@2x.png"
+                        src="/src/images/fruits-watermelon.png" 
+                        alt="Watermelon">
+                        <div class="fruits-shadow"></div>
                         <button>40 UAH / kg</button>
                     </div>
                 </li>
@@ -39,7 +54,12 @@
                     <div class="card-inside">
                         <h3>Lime</h3>
                         <p>Plant</p>
-                        <img src="" alt="Lime">
+                        <img 
+                        srcset="/src/images/fruits-lime.png"
+                        srcset="/src/images/fruits-lime@2x.png"
+                        src="/src/images/fruits-lime.png" 
+                        alt="Lime">
+                        <div class="fruits-shadow"></div>
                         <button>60 UAH / kg</button>
                     </div>
                 </li>
@@ -47,7 +67,12 @@
                     <div class="card-inside">
                         <h3>Apple</h3>
                         <p>Plant</p>
-                        <img src="" alt="Apple">
+                        <img 
+                        srcset="/src/images/fruits-apple.png"
+                        srcset="/src/images/fruits-apple@2x.png"
+                        src="/src/images/fruits-apple.png" 
+                        alt="Apple">
+                        <div class="fruits-shadow"></div>
                         <button>50 UAH / kg</button>
                     </div>
                 </li>
@@ -55,7 +80,12 @@
                     <div class="card-inside">
                         <h3>Peach</h3>
                         <p>Plant</p>
-                        <img src="" alt="Peach">
+                        <img 
+                        srcset="/src/images/fruits-peach.png"
+                        srcset="/src/images/fruits-peach@2x.png"
+                        src="/src/images/fruits-peach.png" 
+                        alt="Peach">
+                        <div class="fruits-shadow"></div>
                         <button>80 UAH / kg</button>
                     </div>
                 </li>
@@ -63,7 +93,12 @@
                     <div class="card-inside">
                         <h3>Plums</h3>
                         <p>Plant</p>
-                        <img src="" alt="Plums">
+                        <img 
+                        srcset="/src/images/fruits-plums.png"
+                        srcset="/src/images/fruits-plums@2x.png"
+                        src="/src/images/fruits-plums.png" 
+                        alt="Plums">
+                        <div class="fruits-shadow"></div>
                         <button>40 UAH / kg</button>
                     </div>
                 </li>
@@ -71,7 +106,12 @@
                     <div class="card-inside">
                         <h3>Orange</h3>
                         <p>Plant</p>
-                        <img src="" alt="Orange">
+                        <img 
+                        srcset="/src/images/fruits-orange.png"
+                        srcset="/src/images/fruits-orange@2x.png"
+                        src="/src/images/fruits-orange.png" 
+                        alt="Orange">
+                        <div class="fruits-shadow"></div>
                         <button>60 UAH / kg</button>
                     </div>
                 </li>
@@ -79,7 +119,12 @@
                     <div class="card-inside">
                         <h3>Kiwi</h3>
                         <p>Plant</p>
-                        <img src="" alt="Kiwi">
+                        <img 
+                        srcset="/src/images/fruits-kiwi.png"
+                        srcset="/src/images/fruits-kiwi@2x.png"
+                        src="/src/images/fruits-kiwi.png" 
+                        alt="Kiwi">
+                        <div class="fruits-shadow"></div>
                         <button>90 UAH / kg</button>
                     </div>
                 </li>
@@ -88,7 +133,9 @@
 
     <div class="order-btn">
         <button id="order-btn-click">
-            <img src="">
+            <svg class="arrow-order-btn" width="14" height="14">
+                <use href="/src/images/icons.svg#icon-arrow"></use>
+            </svg>
             Order
         </button>
     </div>
