--- a/src/sass/_thankyou.scss
+++ b/src/sass/_thankyou.scss
@@ -1,2 +1,87 @@
 .modal-thankyou {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  width: 335px;
+  min-height: 426px;
+  background-color: #e03f5e;
+  /* box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2); */
+  border-radius: 20px;
+  /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  padding: 236px 20px 40px 20px;
+}
+
+.thankyou-close {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  top: 20px;
+  right: 20px;
+  width: 24px;
+  height: 24px;
+  /* border-radius: 50%; */
+  background-color: transparent;
+  //   border: none;
+  //   cursor: pointer;
+  fill: #fff;
+  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+/* .thankyou-close:hover,
+.thankyou-close:focus {
+  background-color: #404bbf;
+  fill: #fff;
+  border: none;
+}
+
+.thankyou-close:active {
+  background-color: #404bbf;
+  fill: #fff;
+  border: none;
+} */
+
+.thankyou-picture {
+  position: absolute;
+  //   margin: 40px auto 20px;
+  left: 50%;
+  top: 40px;
+}
+
+.thankyou-title {
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 14px;
+  text-shadow: 0 4px 70px rgba(0, 0, 0, 0.1);
+}
+
+.thankyou-text {
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.28571;
+  letter-spacing: -0.04em;
+  text-align: center;
+  color: #fff;
+  text-shadow: 0 4px 70px rgba(0, 0, 0, 0.1);
+}
+
+/* =================TABLET================= */
+
+@media screen and (min-width: 768px) {
+  .thankyou-modal {
+    width: 600px;
+    min-height: 545px;
+    padding: 335px 105px 80px 104px;
+  }
 }
