--- a/src/sass/_thankyou.scss
+++ b/src/sass/_thankyou.scss
@@ -76,4 +76,10 @@
   .thankyou-picture {
     margin-bottom: 28px;
   }
+
+  .thankyou-modal {
+    width: 600px;
+    min-height: 545px;
+    padding: 335px 105px 80px 104px;
+  }
 }
