--- a/src/sass/_setup.scss
+++ b/src/sass/_setup.scss
@@ -60,3 +60,11 @@ textarea {
   margin: 0 auto;
   padding: 0 20px;
 }
+
+.is-closed {
+  display: none;
+}
+
+.is-hidden {
+  visibility: hidden;
+}
