--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -4,7 +4,7 @@
       <use href="./images/icons.svg#icon-close-btn"></use>
     </svg>
   </button>
-  <div class="thankyou-picture">
+  <div>
     <picture>
       <source
         media="(max-width: 767px)"
@@ -14,7 +14,7 @@
         media="(min-width: 768px)"
         srcset="./images/thankyou-tablet-desktop.png 1x, ./images/thankyou-tablet-desktop@2x.png 2x"
       />
-      <img src="./images/thankyou-mobile.png" alt="Raspberries" />
+      <img class="thankyou-picture" src="./images/thankyou-mobile.png" alt="Raspberries" />
     </picture>
   </div>
   <div>
