--- a/src/sass/_thankyou.scss
+++ b/src/sass/_thankyou.scss
@@ -80,6 +80,10 @@
   .thankyou-modal {
     width: 600px;
     min-height: 545px;
-    padding: 335px 105px 80px 104px;
+    padding: 68px 104px 80px 105px;
+  }
+
+  .thankyou-picture {
+    margin-bottom: 28px;
   }
 }
