--- a/src/partials/howitworks.html
+++ b/src/partials/howitworks.html
@@ -31,9 +31,11 @@
       </div>
     </li>
   </ul>
-  <img
-    class="howitworks-gif"
-    src="./images/fresh-harvest-box.gif"
-    alt="Animation of fresh fruits"
-  />
+  <div>
+    <img
+      class="howitworks-gif"
+      src="./images/fresh-harvest-box.gif"
+      alt="Animation of fresh fruits"
+    />
+  </div>
 </section>
