--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,12 @@
 <header class="header container">
     <nav class="nav-layout">
-        <ul class="list site-nav off-screen-menu">
+        <ul class="site-nav">
+          <li><a href="" class="link" id="how-it-works">How It Works</a></li>
+          <li><a href="" class="link" id="fruits">Fruits</a></li>
+          <li><a href="" class="link" id="contacts">Contacts</a></li>
+        </ul>
+
+        <ul class="list off-screen-menu">
             <li><a href="" class="link" id="how-it-works">How It Works</a></li>
             <li><a href="" class="link" id="fruits">Fruits</a></li>
             <li><a href="" class="link" id="contacts">Contacts</a></li>
@@ -14,6 +20,8 @@
             <svg class="logo" width="16" height="16">
                 <use href="./images/icons.svg#icon-logo"></use>
             </svg>
+            <a href="./index.html" class="logo-text">fresh harvest box
+            </a>
         </div>
         <div>
             <svg class="icon-basket" width="18.67" height="23.33">
