--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -1,5 +1,5 @@
 <div class="modal-thankyou is-open">
-  <button class="thankyou-close" type="button">
+  <button class="thankyou-close" type="button" id="thankyou-btn">
     <svg class="close-icon" width="14" height="14">
       <use href="./images/icons.svg#icon-close-btn"></use>
     </svg>
