--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -1,7 +1,7 @@
 <div class="modal-thankyou is-open">
   <button class="thankyou-close" type="button" id="thankyou-btn">
     <svg class="close-icon" width="14" height="14">
-      <use href="./images/icons.svg#icon-close-btn"></use>
+      <use href="./images/icons.svg#icon-close-btn-white"></use>
     </svg>
   </button>
   <div>
