--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,24 +1,54 @@
-<section class="hero">
+<section class="hero container">
 
-<h1 class="hero-header container">fresh harvest box is&nbsp;your&nbsp;one-stop place for a delicious fruit basket</h1>
-</h1>
-
-<div class="hero-banner">
-    <ul class="fruits-hero">
-
-        <li class="fruit-li">
-            <img alt="blurred small image of bananas"
-            srcset="../images/hero-ban-mobile.png 1x, ../images/hero-ban-mobile@2x.png"
-            src="../images/hero-ban-mobile.png" />
-        </li>
-
-    <li class="fruit-li">
-        <img alt="blurred small image of strawberries" srcset="../images/hero-straw-mobile.png 1x, ../images/hero-straw-mobile@2x.png"
-            src="../images/hero-straw-mobile.png" />
-    </li>
-
-    </ul>
+    <!-- <div class="hero-header-div">
+        <h1 class="hero-header">fresh harvest box is&nbsp;your&nbsp;one-stop place for a delicious fruit basket</h1>
   
-</div> 
+        <ul class="hero-fruits">
+            <li class="hero-fruits-li">
+                <img alt="blurred small image of strawberries"
+                srcset="./images/hero-straw-mobile.png 1x,
+                ./images/hero-straw-mobile@2x.png 2x"
+                src="./images/hero-straw-mobile.png"/>
+            </li>
+            <li class="hero-fruits-li">
+                <img alt="blurred small image of bananas"
+                srcset="./images/hero-ban-mobile.png 1x,
+                ./images/hero-ban-mobile@2x.png 2x"
+                src="./images/hero-ban-mobile.png"/>
+        </ul>
+    </div>
+
+    <div class="hero-banner">
+            <button class="hero-shop-button"
+        type="button">shop now</button>
+    
+    </div>  -->
+
+    <div class="fruit-desc-area">
+        <div class="fruit-desc green">
+            <h3 class="fruit-h3">Fruit</h3>
+            <img class="fruit-img"
+                alt="image of watermelon on green background"
+                srcset="./images/hero-watermelon.png 1x,
+                ./images/hero-watermelon@2x.png 2x"
+                src="./images/hero-watermelon.png"
+                width="200"
+                height="182"/>
+            <p class="fruit-desc-text green">Refreshing and juicy, watermelon is the perfect summer treat and a great source of hydration</p>
+        </div>
+
+        <div class="fruit-desc yellow">
+            <h3 class="fruit-h3">Fruit</h3>
+            <img class="fruit-img"
+                alt="image of backet with strawberries on yellow background"
+                srcset="./images/hero-strawberries.png 1x,
+                ./images/hero-strawberries@2x.png 2x"
+                src="./images/hero-strawberries.png"
+                width="162"
+                height="185" />
+            <p class="fruit-desc-text yellow">Sweet and juicy, strawberries are packed with vitamin C and antioxidants, making&nbsp;them a delicious and healthy snack</p>
+        </div>
+
+    </div>
 
 </section>
