--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -22,6 +22,39 @@
             <button class="hero-shop-button"
         type="button">shop now</button>
     
+    </div>  -->
+
+    <div class="fruit-desc-area">
+        <div class="fruit-desc green">
+            <h3 class="fruit-h3">Fruit</h3>
+            <img class="fruit-img"
+                alt="image of watermelon on green background"
+                srcset="./images/hero-watermelon.png 1x,
+                ./images/hero-watermelon@2x.png 2x"
+                src="./images/hero-watermelon.png"
+                width="200"
+                height="182"/>
+            <p class="fruit-desc-text green">Refreshing and juicy, watermelon is the perfect summer treat and a great source of hydration</p>
+        </div>
+
+        <div class="fruit-desc yellow">
+            <h3 class="fruit-h3">Fruit</h3>
+            <img class="fruit-img"
+                alt="image of backet with strawberries on yellow background"
+                srcset="./images/hero-strawberries.png 1x,
+                ./images/hero-strawberries@2x.png 2x"
+                src="./images/hero-strawberries.png"
+                width="162"
+                height="185" />
+            <p class="fruit-desc-text yellow">Sweet and juicy, strawberries are packed with vitamin C and antioxidants, making&nbsp;them a delicious and healthy snack</p>
+        </div>
+
+    </div>
+
+    <div class="hero-banner">
+            <button class="hero-shop-button"
+        type="button">shop now</button>
+    
     </div> 
 
     <div class="fruit-desc-area">
