--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,2 +1,21 @@
 <section class="contacts">
+<p class="contacts-main-paragraph">Fresh Harvest Box has got you covered</p>
+<div class="contacts-fruits">
+<ul class="contacts-photos">
+<li>
+<img class="contacts-melon" src="./images/contacts-melon-desktop.jpg"
+alt="melon"
+width="792"
+height="502"
+/>   
+</li>
+<li>
+<img class="contacts-berries" src="./images/contacts-berries-desktop.jpg"
+alt="berries"
+width="400"
+height="502"
+/>  
+</li>
+</ul>
+</div>
 </section>
