--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -1,4 +1,4 @@
-<div class="modal-thankyou is-open">
+<div class="modal-thankyou active">
   <button class="thankyou-close" type="button" id="thankyou-btn">
     <svg class="close-icon" width="14" height="14">
       <use href="./images/icons.svg#icon-close-btn-white"></use>
