--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -14,4 +14,29 @@
     display: flex;
     flex-wrap: nowrap;
     gap: 24px;
+    justify-content: center;
+}
+.contacts-img {
+gap: 0px;
+border-radius: 20px;
+}
+
+.contacts-description {
+font-family: var(--font-family);
+font-size: 14px;
+font-weight: 400;
+line-height: 18px;
+letter-spacing: -0.04em;
+text-align: center;
+}
+.contacts-input {
+width: 292px;
+height: 48px;
+top: 134px;
+left: 100px;
+gap: 0px;
+border-radius: 100px;
+opacity: 0.3px;
+border: 1px solid rgba(255, 255, 255, 1);
+background-color: transparent;
 }
