--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,21 +1,32 @@
 <section class="contacts">
 <p class="contacts-main-paragraph">Fresh Harvest Box has got you covered</p>
+
 <div class="contacts-fruits">
 <ul class="contacts-photos">
 <li>
-<img class="contacts-melon" src="./images/contacts-melon-desktop.jpg"
+<img class="contacts-img" src="./images/contacts-melon-desktop.jpg"
 alt="melon"
 width="792"
 height="502"
 />   
 </li>
 <li>
-<img class="contacts-berries" src="./images/contacts-berries-desktop.jpg"
+<img class="contacts-img" src="./images/contacts-berries-desktop.jpg"
 alt="berries"
 width="400"
 height="502"
 />  
 </li>
 </ul>
+</div>
+
+<p class="contacts-description">Our boxes are packed with delicious, nutritious fruits and vegetables, perfect for anyone looking to eat healthier or support local farmers. Order your box today and start enjoying the best that nature has to offer!</p>
+
+<div class="contacts-subscription">
+<form class="contacts-form">
+<label class="contacts-label">
+<input class="contacts-input" type="email" name="email" placeholder="Enter email..." required />
+</label>
+<button type="submit" class="contacts-button">Subscribe</button>
 </div>
 </section>
