--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -27,6 +27,6 @@ height="502"
 <label class="contacts-label">
 <input class="contacts-input" type="email" name="email" placeholder="Enter email..." required />
 </label>
-<button type="submit" class="contacts-button">Subscribe</button>
+<button type="submit" class="contacts-button">Send</button>
 </div>
 </section>
