--- a/src/sass/_setup.scss
+++ b/src/sass/_setup.scss
@@ -68,3 +68,16 @@ textarea {
 .is-hidden {
   visibility: hidden;
 }
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 32px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
