--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="contacts">
-<p class="contacts-main-paragraph">Fresh Harvest Box has got you covered</p>
+<h1 class="contacts-main-paragraph">Fresh Harvest Box has got you covered</h1>
 
 <div class="contacts-fruits">
 <ul class="contacts-photos">
