--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,9 +2,53 @@
   <div>
     <img
       class="footer-woman-image"
-      src="images/demo.jpg"
+      src="images/footer-girl-mobile.jpg"
       alt="Happy woman holding bananas in her
     hands."
     />
   </div>
+  <div>
+    <svg class="footer-icon-logo" width="16" height="16">
+      <use href="./images/icons.svg#icon-logo"></use>
+    </svg>
+    <span class="footer-text-logo">fresh harvest box</span>
+  </div>
+  <div class="footer-text-logo">
+    <ul>
+      <li>How It Works</li>
+      <li>Fruits</li>
+      <li>Cantacts</li>
+    </ul>
+  </div>
+  <div>
+    <ul>
+      <li>
+        <a href="https://www.facebook.com" target="_blank"
+          ><svg class="footer-socials-logo">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com" target="_blank"
+          ><svg class="footer-socials-logo">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com" target="_blank"
+          ><svg class="footer-socials-logo">
+            <use href="./images/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <address class="footer-text-logo">
+    <a class="footer-text-logo" href="tel:+380 (68) 443-94-26">+380 (68) 443-94-26</a><br />
+    1678 S. Pioneer Road<br />
+    Salt Lake City UT<br />
+    84104
+  </address>
 </footer>
