HERO section- colors blocks
working on layout of colors blocks of fruits and setting up theirs positions

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -25,30 +25,46 @@
     </div>  -->
 
     <div class="fruit-desc-area">
-        <div class="fruit-desc green">
-            <h3 class="fruit-h3">Fruit</h3>
-            <img class="fruit-img"
-                alt="image of watermelon on green background"
-                srcset="./images/hero-watermelon.png 1x,
-                ./images/hero-watermelon@2x.png 2x"
-                src="./images/hero-watermelon.png"
-                width="200"
-                height="182"/>
-            <p class="fruit-desc-text green">Refreshing and juicy, watermelon is the perfect summer treat and a great source of hydration</p>
+        <div class="first-block">
+            <p class="first-block-text">
+                Our expertly curated fruit baskets are made with the freshest, highest quality fruits available. Whether you are looking
+                for a healthy snack or a gift for a loved one, Fresh Harvest Box has got you covered.
+            </p>
+
+            <div class="fruit-desc green">
+                <h3 class="fruit-h3">Fruit</h3>
+                <img class="fruit-img"
+                    alt="image of watermelon on green background"
+                    srcset="./images/hero-watermelon.png 1x,
+                    ./images/hero-watermelon@2x.png 2x"
+                    src="./images/hero-watermelon.png"
+                    width="200"
+                    height="182"/>
+                <p class="fruit-desc-text green">Refreshing and juicy, watermelon is the perfect summer treat and a great source of hydration</p>
+            </div>
         </div>
 
-        <div class="fruit-desc yellow">
-            <h3 class="fruit-h3">Fruit</h3>
-            <img class="fruit-img"
-                alt="image of backet with strawberries on yellow background"
-                srcset="./images/hero-strawberries.png 1x,
-                ./images/hero-strawberries@2x.png 2x"
-                src="./images/hero-strawberries.png"
-                width="162"
-                height="185" />
-            <p class="fruit-desc-text yellow">Sweet and juicy, strawberries are packed with vitamin C and antioxidants, making&nbsp;them a delicious and healthy snack</p>
-        </div>
+        <div class="second-block">
+            <ul class="anchor-buttons">
+                <li class="anchor-li">#organic</li>
+                <li class="anchor-li">#products</li>
+                <li class="anchor-li">#basket</li>
+                <li class="anchor-li">#fruits</li>
+            </ul>
 
+
+            <div class="fruit-desc yellow">
+                <h3 class="fruit-h3">Fruit</h3>
+                <img class="fruit-img"
+                    alt="image of backet with strawberries on yellow background"
+                    srcset="./images/hero-strawberries.png 1x,
+                    ./images/hero-strawberries@2x.png 2x"
+                    src="./images/hero-strawberries.png"
+                    width="162"
+                    height="185" />
+                <p class="fruit-desc-text yellow">Sweet and juicy, strawberries are packed with vitamin C and antioxidants, making&nbsp;them a delicious and healthy snack</p>
+            </div>
+        </div>
     </div>
 
 </section>
