--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -22,7 +22,7 @@
             <button class="hero-shop-button"
         type="button">shop now</button>
     
-    </div>  -->
+    </div> 
 
     <div class="fruit-desc-area">
         <div class="first-block">
