--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero container">
 
-    <!-- <div class="hero-header-div">
+    <div class="hero-header-div">
         <h1 class="hero-header">fresh harvest box is&nbsp;your&nbsp;one-stop place for a delicious fruit basket</h1>
   
         <ul class="hero-fruits">
@@ -22,7 +22,7 @@
             <button class="hero-shop-button"
         type="button">shop now</button>
     
-    </div>  -->
+    </div> 
 
     <div class="fruit-desc-area">
         <div class="first-block">
