--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -5,7 +5,7 @@
 .hero-header {
     position: relative;
     z-index: 999;
-    margin-top: 56px;
+    margin: 56px auto -56px;
     width: 100%;
     height: 118px;
     font-weight: 500;
@@ -19,10 +19,6 @@
 }
 
 .hero-banner {
-    position: absolute;
-    top: 116px;
-    left:0;
-    right: 0;
     justify-items: center;
     margin: 0 auto;
     width: 311px;
@@ -37,7 +33,7 @@
 
 .hero-shop-button {
     position: absolute;
-    top: 444px;
+    top: 560px;
     left: 0;
     right: 0;
     justify-items: center;
