--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -133,7 +133,7 @@
 }
 
 .first-block {
-    padding-top: 44px;
+    padding-top: 84px;
 }
 .first-block-text {
     font-weight: 400;
@@ -149,6 +149,7 @@
 
 .second-block {
     padding-top: 44px;
+    margin-bottom: 80px;
 }
 
 .anchor-buttons {
