--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -16,8 +16,8 @@
                         <h3>Strawberry</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-strawberry.png"
-                        srcset="/src/images/fruits-strawberry@2x.png"
+                        srcset="/src/images/fruits-strawberry.png x1"
+                        srcset="/src/images/fruits-strawberry@2x.png x2"
                         src="/src/images/fruits-strawberry.png" 
                         alt="Strawberry">
                         <div class="fruits-shadow"></div>
@@ -29,8 +29,8 @@
                         <h3>Banana</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-banana.png"
-                        srcset="/src/images/fruits-banana@2x.png"
+                        srcset="/src/images/fruits-banana.png x1"
+                        srcset="/src/images/fruits-banana@2x.png x2"
                         src="/src/images/fruits-banana.png" 
                         alt="Banana">
                         <div class="fruits-shadow"></div>
@@ -42,8 +42,8 @@
                         <h3>Watermelon</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-watermelon.png"
-                        srcset="/src/images/fruits-watermelon@2x.png"
+                        srcset="/src/images/fruits-watermelon.png x1"
+                        srcset="/src/images/fruits-watermelon@2x.png x2"
                         src="/src/images/fruits-watermelon.png" 
                         alt="Watermelon">
                         <div class="fruits-shadow"></div>
@@ -55,8 +55,8 @@
                         <h3>Lime</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-lime.png"
-                        srcset="/src/images/fruits-lime@2x.png"
+                        srcset="/src/images/fruits-lime.png x1"
+                        srcset="/src/images/fruits-lime@2x.png x2"
                         src="/src/images/fruits-lime.png" 
                         alt="Lime">
                         <div class="fruits-shadow"></div>
@@ -68,8 +68,8 @@
                         <h3>Apple</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-apple.png"
-                        srcset="/src/images/fruits-apple@2x.png"
+                        srcset="/src/images/fruits-apple.png x1"
+                        srcset="/src/images/fruits-apple@2x.png x2"
                         src="/src/images/fruits-apple.png" 
                         alt="Apple">
                         <div class="fruits-shadow"></div>
@@ -81,8 +81,8 @@
                         <h3>Peach</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-peach.png"
-                        srcset="/src/images/fruits-peach@2x.png"
+                        srcset="/src/images/fruits-peach.png x1"
+                        srcset="/src/images/fruits-peach@2x.png x2"
                         src="/src/images/fruits-peach.png" 
                         alt="Peach">
                         <div class="fruits-shadow"></div>
@@ -94,8 +94,8 @@
                         <h3>Plums</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-plums.png"
-                        srcset="/src/images/fruits-plums@2x.png"
+                        srcset="/src/images/fruits-plums.png x1"
+                        srcset="/src/images/fruits-plums@2x.png x2"
                         src="/src/images/fruits-plums.png" 
                         alt="Plums">
                         <div class="fruits-shadow"></div>
@@ -107,8 +107,8 @@
                         <h3>Orange</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-orange.png"
-                        srcset="/src/images/fruits-orange@2x.png"
+                        srcset="/src/images/fruits-orange.png x1"
+                        srcset="/src/images/fruits-orange@2x.png x2"
                         src="/src/images/fruits-orange.png" 
                         alt="Orange">
                         <div class="fruits-shadow"></div>
@@ -120,8 +120,8 @@
                         <h3>Kiwi</h3>
                         <p>Plant</p>
                         <img 
-                        srcset="/src/images/fruits-kiwi.png"
-                        srcset="/src/images/fruits-kiwi@2x.png"
+                        srcset="/src/images/fruits-kiwi.png x1"
+                        srcset="/src/images/fruits-kiwi@2x.png x2"
                         src="/src/images/fruits-kiwi.png" 
                         alt="Kiwi">
                         <div class="fruits-shadow"></div>
