--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -1,28 +1,38 @@
-<div class="modal-thankyou active">
-  <button class="thankyou-close" type="button" id="thankyou-btn">
-    <svg class="close-icon" width="14" height="14">
-      <use href="./images/icons.svg#icon-close-btn-white"></use>
-    </svg>
-  </button>
-  <div>
-    <picture>
-      <source
-        media="(max-width: 767px)"
-        srcset="./images/thankyou-mobile.png 1x, ./images/thankyou-mobile@2x.png 2x"
-      />
-      <source
-        media="(min-width: 768px)"
-        srcset="./images/thankyou-tablet-desktop.png 1x, ./images/thankyou-tablet-desktop@2x.png 2x"
-      />
-      <img class="thankyou-picture" src="./images/thankyou-mobile.png" alt="Raspberries" />
-    </picture>
-  </div>
-  <div>
-    <h2 class="thankyou-title">tHANK YOU</h2>
-    <p class="thankyou-text">
-      Thank you for your order! Our team is preparing your box with fresh, delicious fruits and
-      vegetables, and we'll deliver it straight to your doorstep. We appreciate your business and
-      look forward to providing you with the best possible experience!
-    </p>
+<div class="thankyou-background is-open" id="modal-thankyou">
+  <div class="modal-thankyou">
+    <button class="thankyou-close" type="button" id="thankyou-btn">
+      <svg class="close-icon" width="14" height="14">
+        <use href="./images/icons.svg#icon-close-btn-white"></use>
+      </svg>
+    </button>
+    <div>
+      <picture>
+        <source
+          media="(max-width: 767px)"
+          srcset="./images/thankyou-mobile.png 1x, ./images/thankyou-mobile@2x.png 2x"
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./images/thankyou-tablet-desktop.png    1x,
+            ./images/thankyou-tablet-desktop@2x.png 2x
+          "
+        />
+        <img class="thankyou-picture" src="./images/thankyou-mobile.png" alt="Raspberries" />
+      </picture>
+    </div>
+    <div>
+      <h2 class="thankyou-title">tHANK YOU</h2>
+      <p class="thankyou-text">
+        Thank you for your order! Our team is preparing your box with fresh, delicious fruits and
+        vegetables, and we'll deliver it straight to your doorstep. We appreciate your business and
+        look forward to providing you with the best possible experience!
+      </p>
+    </div>
   </div>
 </div>
+
+<scrip>
+  document.querySelector("#thankyou-btn").addEventListener("click", () => {
+  document.querySelector("#modal").classList.add("is-closed"); });
+</scrip>
