--- a/src/sass/_thankyou.scss
+++ b/src/sass/_thankyou.scss
@@ -1,3 +1,21 @@
+.thankyou-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+}
+
+.is-open {
+  visibility: visible;
+  opacity: 1;
+}
+
+.is-closed {
+  display: none;
+}
+
 .modal-thankyou {
   position: absolute;
   top: 50%;
