--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -31,3 +31,8 @@
     </div>
   </div>
 </div>
+
+<scrip>
+  document.querySelector("#thankyou-btn").addEventListener("click", () => {
+  document.querySelector("#modal").classList.add("is-closed"); });
+</scrip>
